--- a/task2/playground_server/Dockerfile
+++ b/task2/playground_server/Dockerfile
@@ -4,11 +4,12 @@ FROM ubuntu:latest
 # Install packages 
 RUN apt-get -y update && \
     apt-get -y upgrade && \
-	apt-get -y install python3-pip python3-dev
+    apt-get -y install python3-pip python3-dev
 	
 ADD . /webApp
 
-RUN pip3 install -r requirements.txt
+RUN pip3 install flask
+RUN pip3 install requests
 
 ENV HOME /webApp
 WORKDIR /webApp
